--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 ErrorDocument 404 /index.php?peticion=error
 
 RewriteEngine on
-RewriteBase /
+RewriteBase /codigo/ocy.opsal.net
 
 RewriteRule ^(.*)\.html$ index.php?peticion=$1 [L,QSA]
 RewriteRule ^(ajax)$ $1.php [L,QSA]
